/*
 * $Id: ChangeLog,v 1.996 2003/05/01 14:11:34 patrickmast Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-05-01 11:06 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbfntx/dbfntx1.c
    ! Small fix to dbfntx
    ! Also set error level to error object when file is not successfully open (clipper compatible)
  * source/rdd/rdd/dbf1.c
    ! When Open of Dbf file fail, release memory of Filename(this avoid GPF) (   hb_xfree( pArea->szDataFileName ));
    * Both changes  above  borrow from harbour
  * source/rtl/listbox.prg
    ! minor fix

2003-05-01 15:56 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * source/rtl/tget.prg
    * minor corrections

2003-04-30 08:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/tprinter.c
  * source/rtl/isprint.c
    ! Added | PRINTER_ENUM_SHARED to Call to EnumPrinters

2003-04-30 00:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/tget.prg
    * Removed call to VarGet() in METHOD New() and revised :Type and PusMask() Methods - Clipper compatibility.

2003-04-29 16:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.c
    % Minor optimizations to hb_compGenJumpThere()

  * source/compiler/harbour.sly
    ! Fixed generation of Default and EndSwitch when NO EXIT statement precedes DEFAULT/END statements.

  * source/rtl/cstr.prg
    ! Few minor fixes to ValToPrg().
    * Replaced all __ErrRT_BASE() with Throw( ErrorNew( ... ) )

  * source/rtl/objfunc.prg
    ! Fixed __ObjGetValueDiff() support of CodeBlock properties.

  * source/vm/classes.c
    ! Fixed scope validation to allow derived classes access to PROTECTED properties.

  * source/vm/hvm.c
    * Corrected compiler warning.

2003-04-27 12:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rdd/dbfntx/dbfntx1.c
     * casts at 3636 and 3640